# so-arm

./: AGENTS.md  FEATURE_SPECS.md  README.md  bimanual.py  current.md  pyproject.toml  single_arm_v0.py  test_so101.py  view_so101.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: spec-contract.md
.github/workflows/: pr-checks.yml
models/so101/: bimanual.xml  single_arm_task.xml  so101.xml
tests/: test_repo_contract.py
