[project]
name = "so-arm"
version = "0.1.0"
description = "SO-101 robot arm simulation with MJX on ROCm"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brax>=0.14.0",
    "mujoco>=3.4.0",
    "mujoco-mjx>=3.4.0",
    # Linux (ROCm) - Preserving your working setup
    "jax==0.7.1; sys_platform == 'linux'",
    "jax-rocm7-pjrt==0.7.1; sys_platform == 'linux'",
    "jax-rocm7-plugin==0.7.1; sys_platform == 'linux'",
    "jaxlib @ https://github.com/ROCm/jax/releases/download/rocm-jax-v0.7.1/jaxlib-0.7.1-cp313-cp313-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux'",
    # macOS (Apple Silicon) - Standard JAX
    "jax>=0.4.35; sys_platform == 'darwin'",
    "jaxlib>=0.4.35; sys_platform == 'darwin'",
]

[project.scripts]
test-sim = "test_so101:main"
view-arm = "view_so101:main"
